--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,37 @@ article + article > ol{
     top: 15px;
 }
 
+details:hover {
+    color:red;
+}
 
+a[href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html"]:active {
+    text-decoration: wavy green overline underline;
+}
+
+#goals {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+
+#goals div, #disc div {
+    padding: 10px 10px 10px 10px;
+    border-color:black; 
+    border-style: solid;
+    border-width:3px;
+}
 /*Sections*/
+#disc {
+    display:grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+       "first second"
+       "third fourth";
+}
+
 
 
 
