--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,7 @@ a[href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html"]:active
     border-width:3px;
 }
 /*Sections*/
+@media (width > 4in) {
 #disc {
     display:grid;
     grid-template-columns: auto;
@@ -151,7 +152,6 @@ a[href="https://www.atsdr.cdc.gov/asbestos/health_effects_asbestos.html"]:active
        "first second"
        "third fourth";
 }
-
-
+}
 
 
